# Component-Measure

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
Measurement/: Measurement.sln
Measurement.UnitTests/: Measurement.UnitTests.sln
Measurement.UnitTests/Measurement.UnitTests/: Measurement.UnitTests.csproj  Tests.cs
Measurement/Measurement/: Measurement.cs  Measurement.csproj  packages.config
image/: 图片使用说明.txt
image/1200-100-white/: 18-06-27-17-16-04top.tif  18-06-27-17-16-29top.tif  18-06-27-17-16-55top.tif  18-06-27-17-17-23top.tif
image/1232-white/: 18-03-31-15-22-24.tif  18-03-31-15-24-19.tif  18-03-31-15-25-17.tif
image/1232（白色）/: 18-03-31-15-21-28.tif  18-03-31-15-21-55.tif  18-03-31-15-22-54.tif  18-03-31-15-23-22.tif  18-03-31-15-23-50.tif  18-03-31-15-24-48.tif  18-03-31-15-25-49.tif
image/1299-200-white/: 18-07-31-15-18-24top.tif  18-07-31-15-19-18top.tif  18-07-31-15-19-45top.tif  18-07-31-15-20-41top.tif  18-07-31-15-21-07top.tif
image/1299-200（白色）/: 18-07-31-15-17-03top.tif  18-07-31-15-17-29top.tif  18-07-31-15-17-56top.tif  18-07-31-15-18-50top.tif  18-07-31-15-20-12top.tif
image/1355.5-100-cherry-red/: 18-08-24-16-03-28top.tif  18-08-24-16-06-20top.tif
image/1355.5-100（樱桃红）/: 18-08-24-16-02-00top.tif  18-08-24-16-04-19top.tif  18-08-24-16-09-53top.tif
include/: Measure_Origins.hpp  circle.hpp  contour.hpp  detectLines.hpp  getExteriorContour.hpp  measure.h  utils.h
src/: Measure_Origins.cpp  circle.cpp  circles.cpp  contour.cpp  detectLines.cpp  getExteriorContour.cpp  main.cpp  utils.cpp
(+158 files in other folders)
